# TS_ANALYSIS_HECTOR

./: .gitignore  README.md  environment.yml  machine_config.yaml  main.py  pyproject.toml
example_hector_config/: estimatespectrum.ctl  estimatetrend.ctl  findoffset.ctl  modelspectrum.ctl  removeoutliers.ctl
example_python/: analyse_and_plot.py  analyse_timeseries.py  convert_neu2mom.py  convert_sol2mom.py  find_all_offsets.py  find_offset.py  test1.py
projects/demo_project/config/: config.yaml
scripts/: __init__.py  analyse_and_plot_project.py  convert_dat_to_neu.py  convert_neu_to_mom.py  copy_original_files.py  init_project.py  project_config.py  project_registry.py  repo_help.py
