[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-analysis-hector"
version = "0.1.0"
description = "Time-series analysis helpers for HECTOR workflows."
requires-python = ">=3.12"

[project.scripts]
initiate-project = "scripts.init_project:main"
copy-original-files = "scripts.copy_original_files:main"
convert-dat-to-neu = "scripts.convert_dat_to_neu:main"
convert-neu-to-mom = "scripts.convert_neu_to_mom:main"
analyse-and-plot = "scripts.analyse_and_plot_project:main"
repo-help = "scripts.repo_help:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["scripts"]
